fix chat list buttons visibility

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatMenu/chat-menu.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatMenu/chat-menu.css
@@ -4,7 +4,7 @@
 .visible-menu {
     @apply flex;
 }
-.visible-menu .chat-menu-btn.btn-round.on {
+.active-chats .visible-menu .chat-menu-btn.btn-round.on {
     @apply visible;
 }
 .visible-menu .chat-menu-btn.btn-round.off,
